# ego

./: Cargo.toml  README.md
src/: main.rs  session.rs  ui.rs
