[package]
name = "ego"
version = "0.1.0"
edition = "2021"
authors = ["Taj Hans"]
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
ratatui = "0.26.0"
crossterm = "0.28.1"
git2 = "0.18"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
